test/syc/good/initas.c
/*
 * Initialization of array of structures
 */

struct s {
	int x;
	int y;
};

struct s a[2] = { { 1, 2 }, { 3, 4 } };
