test/syc/bad/structdredef.c
/*
 * Redefinition of 'struct foo' as a different kind of tag
 */

struct foo {
	int x;
	int y;
} f;

union foo;
